@@ -9,43 +9,54 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 public class CorsConfig {
 
-    @Value("${frontend.url}")
-    private String frontendUrl;
+    @Value("${cors.allowed-origins}")
+    private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        List<String> origins = Arrays.stream(frontendUrl.split(","))
-                .map(String::trim)
-                .collect(Collectors.toList());
+        // Handle wildcard or specific origins
+        if ("*".equals(allowedOrigins.trim())) {
+            // Allow all origins
+            configuration.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            // Parse comma-separated origins
+            List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .toList();
 
-        // ✅ Explicit origins only (REQUIRED with credentials)
-        configuration.setAllowedOrigins(origins);
+            configuration.setAllowedOrigins(origins);
+        }
 
-        // ✅ Allowed HTTP methods
-        configuration.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        // Allow all common HTTP methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
         ));
 
-        // ✅ Allowed headers
+        // Allow all headers
         configuration.setAllowedHeaders(List.of("*"));
 
-        // ✅ Exposed headers
-        configuration.setExposedHeaders(List.of(
-                "Authorization"
-        ));
-
-        // ✅ Required for JWT / cookies
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
 
+        // Cache preflight response for 1 hour
         configuration.setMaxAge(3600L);
 
+        // Expose these headers to the client
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Total-Count",
+                "X-Total-Pages"
+        ));
+
+        // Apply to all endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
